@@ -31,8 +31,7 @@ main()
 
 	EXEC SQL EXECUTE foo1 USING DESCRIPTOR indesc;
 
-	//EXEC SQL SET DESCRIPTOR indesc VALUE 1 DATA = 2;
-	EXEC SQL SET DESCRIPTOR indesc VALUE 1 DATA = :val1output;
+	EXEC SQL SET DESCRIPTOR indesc VALUE 1 DATA = 2;
 	EXEC SQL SET DESCRIPTOR indesc VALUE 2 INDICATOR = :val2null, DATA = :val2;
 	
 	EXEC SQL EXECUTE foo1 USING DESCRIPTOR indesc;
